--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -14,6 +14,8 @@ sonar.test.inclusions = src/**/test/**/*
  
 sonar.coverage.exclusions = **/ErrorDetails.java, **/SpringBootRestApiMysqlApplication.java, \
    							 **/User.java, **/GlobalExceptionHandler.java, **/ResourceNotFoundException.java
+   							 
+sonar.cpd.exclusions = **/dto/*, **/entity/*    							 
  
  
  
